# kraken

./: .gitignore  Makefile  README.md  pyproject.toml
bracy/: Makefile
kraken_grant_stuff/: kraken.py  kraken_balances.py  kraken_control.py  kraken_executions.py  kraken_l2.py  kraken_live_plot.py  kraken_order.py  kraken_testing.py  kraken_token.py  order_book.py
kraken_grant_stuff/data/: queries.py  ticker_data.csv
