[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken_bot"
version = "0.1.0"
description = "Kraken Bot"

dependencies = [
    "jupyter",
    "krakenex",
    "pandas",
    "websocket-client",
    "matplotlib",
    "python-dotenv"
]
#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
#.idea/

